<resources>
    <string name="app_name">Quick_Med</string>
    <string name="title_activity_intro">Intro</string>
    <string name="title_activity_intro2">Intro2</string>
    <string name="number_picker_formatter">%02d</string>
    <string-array name="am_pm_array">
        <item>오전</item>
        <item>오후</item>
    </string-array>
    <string name="title_activity_search_med">Search_Med</string>
    <string name="medicine_image">약 이미지</string>
    <string name="effect_info">효과 정보</string>
    <string name="dosage_info">복용 방법</string>
    <string name="side_effects_info">부작용 정보</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="title_activity_info_med">Info_Med</string>
    <string name="title_activity_alarm_receiver">AlarmReceiver</string>
</resources>
